--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@ var showNearest = function() {
 http://taisukef.github.io/SPARQLKnocker/
 http://fukuno.jig.jp/app/odp/datalist.html
 */
+/*
 var TYPE = "http://purl.org/jrrk#PublicWIFI";
+*/
+var TYPE = "http://purl.org/jrrk#Hydrant";
 
 var icons = {
-	"http://purl.org/jrrk#PublicWIFI": { icon: "icon/icon_wifi.png", icon_plugs: "icon/icon_wifi_red.png", name: "Free WiFi", getIcon: function(data) { return data.plugs && data.plugs == "有" ? this.icon_plugs : this.icon } }
+	"http://purl.org/jrrk#Hydrant": { icon: "icon/icon_wifi.png", icon_plugs: "icon/icon_wifi_red.png", name: "Free WiFi", getIcon: function(data) { return data.plugs && data.plugs == "有" ? this.icon_plugs : this.icon } }
 };
 
 /*
