--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ var TYPE = "http://purl.org/jrrk#PublicWIFI";
 var TYPE = "http://purl.org/jrrk#Hydrant";
 
 var icons = {
-	"http://purl.org/jrrk#Hydrant": { icon: "icon/icon_start.png", icon_plugs: "icon/icon_wifi_red.png", name: "Free WiFi", getIcon: function(data) { return data.plugs && data.plugs == "有" ? this.icon_plugs : this.icon } }
+	"http://purl.org/jrrk#Hydrant": { icon: "icon/icon_star.png", icon_plugs: "icon/icon_wifi_red.png", name: "Free WiFi", getIcon: function(data) { return data.plugs && data.plugs == "有" ? this.icon_plugs : this.icon } }
 };
 
 /*
